fixing docker packaging (put into profile), adding more on README.md